# work-google-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: claude-config.md  setup.md
src/work_google_mcp/: __init__.py  __main__.py  auth.py  config.py  errors.py  formatting.py  server.py
src/work_google_mcp/tools/: __init__.py  gmail.py
tests/: conftest.py  test_account_guard.py  test_gmail_tools.py
